# ai-price-monitor

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: settings.toml
data/: static_prices.json
src/ai_price_monitor/: __init__.py  calculator.py  cli.py  comparator.py  config.py  html_reporter.py  models.py  renderer.py  reporter.py  storage.py
src/ai_price_monitor/scrapers/: __init__.py  anthropic.py  base.py  deepseek.py  kimi.py  openai.py
tests/: conftest.py  test_calculator.py  test_models.py  test_scrapers.py
