[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-price-monitor"
version = "0.1.0"
description = "Monitor and compare AI API pricing across OpenAI, Anthropic, Kimi, and DeepSeek"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
  "typer[all]>=0.12",
  "rich>=13",
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "lxml>=5",
  "pydantic>=2.7",
  "apscheduler>=3.10",
  "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
ai-price-monitor = "ai_price_monitor.cli:app"

[project.optional-dependencies]
playwright = ["playwright>=1.40"]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-httpx>=0.30",
  "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ai_price_monitor"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
